--- a/Cleaning_ipnb/CleanAirQuality.ipynb
+++ b/Cleaning_ipnb/CleanAirQuality.ipynb
@@ -65,7 +65,7 @@
       "text/plain": [
        "array(['stn_code', 'sampling_date', 'state', 'location', 'agency', 'type',\n",
        "       'so2', 'no2', 'rspm', 'spm', 'location_monitoring_station',\n",
-       "       'pm2_5', 'date'], dtype=object)"
+       "       'pm2_5', 'date', 'spm'], dtype=object)"
       ]
      },
      "metadata": {},
