--- a/Cleaning_ipnb/CleanAirQuality.ipynb
+++ b/Cleaning_ipnb/CleanAirQuality.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.7.9 64-bit",
-   "display_name": "Python 3.7.9 64-bit",
+   "name": "Python 3.7.9 64-bit ('myenv': conda)",
+   "display_name": "Python 3.7.9 64-bit ('myenv': conda)",
    "metadata": {
     "interpreter": {
      "hash": "b8c1dc0667d957209bd208daa667676ada033b9f1c9f74f83f0de44230d4154a"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +65,11 @@
       "text/plain": [
        "array(['stn_code', 'sampling_date', 'state', 'location', 'agency', 'type',\n",
        "       'so2', 'no2', 'rspm', 'spm', 'location_monitoring_station',\n",
-       "       'pm2_5', 'date', 'spm'], dtype=object)"
+       "       'pm2_5', 'date'], dtype=object)"
       ]
      },
      "metadata": {},
-     "execution_count": 289
+     "execution_count": 4
     }
    ],
    "source": [
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(['stn_code', 'sampling_date', 'agency', 'type', 'location_monitoring_station','pm2_5'], axis = 1)"
+    "df = df.drop(['stn_code', 'sampling_date', 'agency', 'type', 'location_monitoring_station','pm2_5', 'spm'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = list(set(df['state']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,31 +154,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Assam 2011\nMeghalaya 2005\nTelangana 2005\nTelangana 2006\nTelangana 2007\nTelangana 2008\nTelangana 2009\nTelangana 2010\nTelangana 2011\nTelangana 2012\nTelangana 2013\nTelangana 2014\nDaman & Diu 2005\nDaman & Diu 2006\nDaman & Diu 2013\nDaman & Diu 2014\nDelhi 2010\nBihar 2013\nBihar 2014\nArunachal Pradesh 2005\nArunachal Pradesh 2006\nArunachal Pradesh 2007\nArunachal Pradesh 2008\nArunachal Pradesh 2009\nArunachal Pradesh 2010\nArunachal Pradesh 2011\nArunachal Pradesh 2012\nArunachal Pradesh 2013\nUttarakhand 2009\nUttarakhand 2014\nJammu & Kashmir 2005\nJammu & Kashmir 2006\nJammu & Kashmir 2007\nJammu & Kashmir 2008\nKarnataka 2010\nSikkim 2005\nSikkim 2006\nSikkim 2008\nSikkim 2009\nSikkim 2010\nSikkim 2011\nSikkim 2012\nSikkim 2013\nSikkim 2014\nManipur 2005\nManipur 2006\nManipur 2009\nManipur 2010\nManipur 2011\nManipur 2012\nManipur 2013\nManipur 2014\nNagaland 2012\nNagaland 2014\nMizoram 2009\nDadra & Nagar Haveli 2005\nDadra & Nagar Haveli 2006\nDadra & Nagar Haveli 2013\nDadra & Nagar Haveli 2014\n"
+     ]
+    }
+   ],
    "source": [
-    "df.to_csv(\"AirQualityData-Clean.csv\")"
+    "for state in states:\n",
+    "    for year in years:\n",
+    "        if (state, year) not in df.index:\n",
+    "            print(state, year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv(\"AirQualityData-Clean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "so2       3\n",
-       "no2       1\n",
-       "rspm      2\n",
-       "spm     104\n",
+       "so2     3\n",
+       "no2     1\n",
+       "rspm    2\n",
        "dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 298
+     "execution_count": 15
     }
    ],
    "source": [
@@ -179,21 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "              so2  no2       rspm        spm\n",
-       "state   date                                \n",
-       "Mizoram 2005  NaN  NaN  27.856287  93.586826"
+       "              so2  no2       rspm\n",
+       "state   date                     \n",
+       "Mizoram 2005  NaN  NaN  27.856287"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n      <th>spm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Mizoram</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>27.856287</td>\n      <td>93.586826</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Mizoram</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>27.856287</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 299
+     "execution_count": 16
     }
    ],
    "source": [
@@ -203,23 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "               so2        no2       rspm         spm\n",
-       "state    date                                       \n",
-       "Mizoram  2005  NaN        NaN  27.856287   93.586826\n",
-       "         2008  NaN   7.246286  37.304207   80.275081\n",
-       "Nagaland 2005  NaN  14.760000  79.764706  154.161765"
+       "               so2        no2       rspm\n",
+       "state    date                           \n",
+       "Mizoram  2005  NaN        NaN  27.856287\n",
+       "         2008  NaN   7.246286  37.304207\n",
+       "Nagaland 2005  NaN  14.760000  79.764706"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n      <th>spm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">Mizoram</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>27.856287</td>\n      <td>93.586826</td>\n    </tr>\n    <tr>\n      <th>2008</th>\n      <td>NaN</td>\n      <td>7.246286</td>\n      <td>37.304207</td>\n      <td>80.275081</td>\n    </tr>\n    <tr>\n      <th>Nagaland</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>14.760000</td>\n      <td>79.764706</td>\n      <td>154.161765</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">Mizoram</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>27.856287</td>\n    </tr>\n    <tr>\n      <th>2008</th>\n      <td>NaN</td>\n      <td>7.246286</td>\n      <td>37.304207</td>\n    </tr>\n    <tr>\n      <th>Nagaland</th>\n      <th>2005</th>\n      <td>NaN</td>\n      <td>14.760000</td>\n      <td>79.764706</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 300
+     "execution_count": 17
     }
    ],
    "source": [
@@ -229,22 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                                so2        no2  rspm  spm\n",
-       "state                date                                \n",
-       "Dadra & Nagar Haveli 2012  7.618667  20.181333   NaN  NaN\n",
-       "Daman & Diu          2012  7.628947  20.147368   NaN  NaN"
+       "                                so2        no2  rspm\n",
+       "state                date                           \n",
+       "Dadra & Nagar Haveli 2012  7.618667  20.181333   NaN\n",
+       "Daman & Diu          2012  7.628947  20.147368   NaN"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n      <th>spm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Dadra &amp; Nagar Haveli</th>\n      <th>2012</th>\n      <td>7.618667</td>\n      <td>20.181333</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Daman &amp; Diu</th>\n      <th>2012</th>\n      <td>7.628947</td>\n      <td>20.147368</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Dadra &amp; Nagar Haveli</th>\n      <th>2012</th>\n      <td>7.618667</td>\n      <td>20.181333</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Daman &amp; Diu</th>\n      <th>2012</th>\n      <td>7.628947</td>\n      <td>20.147368</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 301
+     "execution_count": 18
     }
    ],
    "source": [
@@ -254,44 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                              so2        no2        rspm  spm\n",
-       "state             date                                       \n",
-       "Andhra Pradesh    2010   5.365275  15.397188   69.487281  NaN\n",
-       "                  2012   7.438174  15.762852   77.661990  NaN\n",
-       "                  2013   7.379130  17.400199   76.647496  NaN\n",
-       "                  2014   8.658371  18.582353   74.896863  NaN\n",
-       "Arunachal Pradesh 2014   2.000000   5.000000   69.400000  NaN\n",
-       "...                           ...        ...         ...  ...\n",
-       "Uttarakhand       2012  26.546667  29.173333  180.415855  NaN\n",
-       "                  2013  23.455026  25.785714  141.844615  NaN\n",
-       "West Bengal       2011  17.134927  56.929974  117.222886  NaN\n",
-       "                  2012  41.414067  54.673853  106.147554  NaN\n",
-       "                  2014   8.076540  57.616055  115.317362  NaN\n",
-       "\n",
-       "[104 rows x 4 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n      <th>spm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">Andhra Pradesh</th>\n      <th>2010</th>\n      <td>5.365275</td>\n      <td>15.397188</td>\n      <td>69.487281</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2012</th>\n      <td>7.438174</td>\n      <td>15.762852</td>\n      <td>77.661990</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>7.379130</td>\n      <td>17.400199</td>\n      <td>76.647496</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2014</th>\n      <td>8.658371</td>\n      <td>18.582353</td>\n      <td>74.896863</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>Arunachal Pradesh</th>\n      <th>2014</th>\n      <td>2.000000</td>\n      <td>5.000000</td>\n      <td>69.400000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">Uttarakhand</th>\n      <th>2012</th>\n      <td>26.546667</td>\n      <td>29.173333</td>\n      <td>180.415855</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>23.455026</td>\n      <td>25.785714</td>\n      <td>141.844615</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">West Bengal</th>\n      <th>2011</th>\n      <td>17.134927</td>\n      <td>56.929974</td>\n      <td>117.222886</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2012</th>\n      <td>41.414067</td>\n      <td>54.673853</td>\n      <td>106.147554</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2014</th>\n      <td>8.076540</td>\n      <td>57.616055</td>\n      <td>115.317362</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>104 rows × 4 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 302
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get rows that have null values for spm\n",
-    "df[df['spm'].isnull()]\n",
+    "# df[df['spm'].isnull()]\n",
     "# df[df.isnull().any(axis=1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -299,13 +301,13 @@
      "data": {
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [so2, no2, rspm, spm]\n",
+       "Columns: [so2, no2, rspm]\n",
        "Index: []"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n      <th>spm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>so2</th>\n      <th>no2</th>\n      <th>rspm</th>\n    </tr>\n    <tr>\n      <th>state</th>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 303
+     "execution_count": 21
     }
    ],
    "source": [
