--- a/Air_quality_mpc_zscore.ipynb
+++ b/Air_quality_mpc_zscore.ipynb
@@ -1145,7 +1145,7 @@
     "for ele in air_quality_list:\n",
     "    air_quality_mpc[ele[0]]=air_quality_mpc.get(ele[0],{})\n",
     "    l=[float(i) for i in ele[2:]]\n",
-    "    air_quality_mpc[ele[0]][ele[1]]= mean(l)\n",
+    "    air_quality_mpc[ele[0]][ele[1]]= statistics.mean(l)\n",
     "air_quality_mpc"
    ]
   },
