Air_Quality_MapFile to Zscore_MapFile

--- a/PollutedCities.ipynb
+++ b/PollutedCities.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 146
+     "execution_count": 5
     }
    ],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 153
+     "execution_count": 12
     }
    ],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 155
+     "execution_count": 14
     }
    ],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADDED MPC AND XCO YCO FROM Air_Quality_MapFile.csv\n",
     "\n",
-    "df2 = pd.read_csv('Air_Quality_MapFile.csv')\n",
+    "df2 = pd.read_csv('Zscore_MapFile.csv')\n",
     "df2 = df2[df2['Year'] == 2014 ]\n",
     "# df2.drop(df2[df2['Year'] < 2014 ].index , inplace=True)\n",
     "df2 = df2.drop(['Year', 'zscore', 'spot'], axis = 1)\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,44 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'Andhra Pradesh',\n",
-       " 'Arunachal Pradesh',\n",
-       " 'Assam',\n",
-       " 'Chandigarh',\n",
-       " 'Chhattisgarh',\n",
-       " 'Delhi',\n",
-       " 'Goa',\n",
-       " 'Gujarat',\n",
-       " 'Haryana',\n",
-       " 'Himachal Pradesh',\n",
-       " 'Jammu & Kashmir',\n",
-       " 'Jharkhand',\n",
-       " 'Karnataka',\n",
-       " 'Kerala',\n",
-       " 'Madhya Pradesh',\n",
-       " 'Maharashtra',\n",
-       " 'Meghalaya',\n",
-       " 'Mizoram',\n",
-       " 'Odisha',\n",
-       " 'Puducherry',\n",
-       " 'Punjab',\n",
-       " 'Rajasthan',\n",
-       " 'Tamil Nadu',\n",
-       " 'Uttar Pradesh',\n",
-       " 'West Bengal'}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 418
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set(df['state'])"
    ]
