--- a/Maps/2014mpc-map-generator.ipynb
+++ b/Maps/2014mpc-map-generator.ipynb
@@ -350,8 +350,8 @@
     "<div class='legend-scale'>\n",
     "  <ul class='legend-labels'>\n",
     "    <li><span style='background:red;opacity:0.7;'></span>MPC>=65</li>\n",
-    "    <li><span style='background:green;opacity:0.7;'></span>45>=MPC>65</li>\n",
-    "    <li><span style='background:#BDB76B;opacity:0.7;'></span>MPC<45</li>\n",
+    "    <li><span style='background:#BDB76B;opacity:0.7;'></span>45>=MPC>65</li>\n",
+    "    <li><span style='background:green;opacity:0.7;'></span>MPC<45</li>\n",
     "    <li><span style='background:black;opacity:0.7;'></span>Insufficient Data</li>\n",
     "    \n",
     "  </ul>\n",
